Docs: Modify parentKey required to false

--- a/.github/ISSUE_TEMPLATE/issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/issue-form.yml
@@ -7,10 +7,10 @@ body:
     id: parentKey
     attributes:
       label: '상위 작업 Ticket Number'
-      description: '상위 작업의 Ticket Number를 기입해주세요'
+      description: '하위 작업으로 만드시려면 상위 작업의 Ticket Number를 기입해주세요'
       placeholder: 'KNU-000'
     validations:
-      required: true
+      required: false
 
   - type: input
     id: description
